--- a/options.ini
+++ b/options.ini
@@ -1,13 +1,50 @@
 ; варианты структуры хранения данных
 
-[]
+; 1 вариант
+[Players]
 ; имя игрока = победы,ничьи,поражения
 PlayerName = 2,5,1
 Player2Name = 0,0,0
 
+[Player2:Player1]
+turns = <структура ходов для сохранённой партии>
 
+
+; 2 вариант
 [Player1]
 wins = 2
 ties = 5
 fails = 1
-game1 =
+bot1 = <структура ходов для сохранённой партии>
+
+[Player2]
+wins = 0
+ties = 0
+fails = 0
+Player1 = <структура ходов для сохранённой партии>
+bot2 = <структура ходов для сохранённой партии>
+
+
+; 3 вариант
+# players.ini
+[Player3]
+wins = 2
+ties = 5
+fails = 1
+training = False
+
+[Player4]
+wins = 0
+ties = 0
+fails = 0
+training = True
+
+# saves.ini
+[Player4:Player3]
+turns = <структура ходов для сохранённой партии>
+
+[Player4:bot2]
+turns = <структура ходов для сохранённой партии>
+
+[bot1:Player3]
+turns = <структура ходов для сохранённой партии>
