--- a/saves.ini
+++ b/saves.ini
@@ -1,8 +1,8 @@
-[Player4:Player3]
-turns = <структура ходов для сохранённой партии>
+[Player2:Player1]
+turns = 0,2|4
 
-[Player4:bot2]
-turns = <структура ходов для сохранённой партии>
+[Player2:bot2]
+turns = 2,5,1|4,8
 
-[bot1:Player3]
-turns = <структура ходов для сохранённой партии>
+[bot1:Player1]
+turns = 4|6
